--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
 
     <string name="web_client_id">509388667130-kfpb8fkjpqovht81b7s56mmgl8gk24ci.apps.googleusercontent.com</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="color_array">
+        <item>#FE6DA8</item>
+        <item>#56B7F1</item>
+        <item>#CDA67F</item>
+        <item>#FED70E</item>
+    </string-array>
 </resources>
